--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,1 +1,16 @@
-<p>formulario works!</p>
+<h1>Añadir Material</h1>
+<table>
+  <tr>
+    <td>Nombre: </td>
+    <td><input type="number" [(ngModel)]="nombre"></td>
+  </tr>
+  <tr>
+    <td>Descipcion: </td>
+    <td><input type="number" [(ngModel)]="descripcion"></td>
+  </tr>
+  <tr>
+    <td>Precio: </td>
+    <td><input type="number" [(ngModel)]="precio"></td>
+  </tr>
+</table>
+<input type="button" (click)="saveMaterial()" value="Guardar">
