--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -1,1 +1,15 @@
-<p>registro works!</p>
+<h1>Registro Material</h1>
+<div *ngIf="material.length!=0">
+  <table class="table table-hover">
+    <tbody>
+    <tr *ngFor="let material of material">
+      <td>{{material.id}}</td>
+      <td>{{material.nombre}}</td>
+      <td>{{material.descripcion}}</td>
+      <td>{{material.precio}}</td>
+      <td><input type="button" value="Cambiar Precio" (click)="modifyPrecio(material.id)"></td>
+      <td><input type="button" value="Eliminar Registro" (click)="deleteMaterial(material.id)"></td>
+    </tr>
+    </tbody>
+  </table>
+</div>
