cambiado error input

--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -2,11 +2,11 @@
 <table>
   <tr>
     <td>Nombre: </td>
-    <td><input type="number" [(ngModel)]="nombre"></td>
+    <td><input type="text" [(ngModel)]="nombre"></td>
   </tr>
   <tr>
     <td>Descipcion: </td>
-    <td><input type="number" [(ngModel)]="descripcion"></td>
+    <td><input type="text" [(ngModel)]="descripcion"></td>
   </tr>
   <tr>
     <td>Precio: </td>
